--- a/AeroVendas.ULF.Cliente/Pages/ContratosSemAero.razor
+++ b/AeroVendas.ULF.Cliente/Pages/ContratosSemAero.razor
@@ -1,5 +1,5 @@
-﻿@page "/reportnormativo"
-@using Normativo.Cliente.Components
+﻿@page "/ContratosSemAero"
+@using AeroVendas.ULF.Cliente.Components
 
 
 <div id="content">
@@ -8,7 +8,7 @@
 	<div class="panel-body">
 		<div class="row mb-3">
 			<div class="col-md-5">
-				<NomeNormativo OnSelectChanged="SelectChanged" NomeNormativoList="ViewNomeNormativoList" />
+				<Cidades OnSelectChanged="SelectChanged" CidadesList="CidadesList" />
 			</div>
 			<div class="col-md-5">
 				<Search OnSearchChanged="SearchChanged" />
@@ -36,7 +36,7 @@
 	<div class="row">
 
 		<div class="col">
-			<ReportLogNormativoTable viewLogsNormativos="ViewLogNormativoList" />
+			<AeroVendasTable  viewLogsNormativos="viewAeroVendas" />
 		</div>
 	</div>
 </div>
