--- a/AeroVendas.ULF.Cliente/_Imports.razor
+++ b/AeroVendas.ULF.Cliente/_Imports.razor
@@ -8,3 +8,9 @@
 @using Microsoft.JSInterop
 @using AeroVendas.ULF.Cliente
 @using AeroVendas.ULF.Cliente.Shared
+@using Microsoft.AspNetCore.Components.WebAssembly.Hosting
+@using Microsoft.AspNetCore.Authorization
+
+
+
+
