--- a/AeroVendas.ULF.Cliente/Shared/NavMenu.razor
+++ b/AeroVendas.ULF.Cliente/Shared/NavMenu.razor
@@ -1,6 +1,9 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@inject IWebAssemblyHostEnvironment hostEnviroment
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">AeroVendas.ULF.Cliente</a>
+        <a class="navbar-brand" href="">Relatório de Normativos</a>
+
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -8,29 +11,47 @@
 </div>
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
+
+
     <nav class="flex-column">
+
+        @if (!hostEnviroment.IsProduction())
+        {
+            string imageEnv = hostEnviroment.IsDevelopment() ? "bi bi-code-square" : "bi bi-bug";
+
+            <div class="nav-item px-3">
+
+                <a class="nav-link inactive noHover fs-3" role="link" aria-disabled="true">
+                    <i class="@imageEnv"></i>@hostEnviroment.Environment
+                </a>
+            </div>
+        }
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+
                 <span class="oi oi-home" aria-hidden="true"></span> Home
+
             </NavLink>
         </div>
+
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="ContratosSemAero">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Contratos Sem Aero
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
+
+
     </nav>
 </div>
 
 @code {
+
     private bool collapseNavMenu = true;
+    private string? imgEnviroment;
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+
+
 
     private void ToggleNavMenu()
     {
