--- a/AeroVendas.ULF.Cliente/App.razor
+++ b/AeroVendas.ULF.Cliente/App.razor
@@ -1,4 +1,5 @@
 ﻿@using AeroVendas.ULF.Cliente.Pages;
+@using Microsoft.AspNetCore.Components.Authorization
 
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(App).Assembly">
