--- a/AeroVendas.ULF.Cliente/Pages/Index.razor
+++ b/AeroVendas.ULF.Cliente/Pages/Index.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
 @page "/index"
-@using AeroVendas.ULF.Cliente
+@using AeroVendas.ULF.Cliente.Components
+
 
 <PageTitle>Index</PageTitle>
 
