--- a/AeroVendas.ULF.Cliente/Shared/MainLayout.razor
+++ b/AeroVendas.ULF.Cliente/Shared/MainLayout.razor
@@ -1,17 +1,25 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
+    <div class="sidebar hideWhenPrint">
         <NavMenu />
     </div>
 
     <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+        <div class="top-row px-4 hideWhenPrint">
+
+
+            <h3><span class="btn btn-success">Unimed Leste Fluminense</span></h3>
         </div>
 
         <article class="content px-4">
-            @Body
+            <CascadingValue Name="HeadingColor" Value="@_color">
+                @Body
+            </CascadingValue>
         </article>
     </main>
 </div>
+@code
+{
+    private readonly string _color = "#036635";
+}
