--- a/AeroVendas.ULF.Cliente/Components/Home.razor
+++ b/AeroVendas.ULF.Cliente/Components/Home.razor
@@ -2,10 +2,11 @@
 	<h1 style="color:@Color">
 		@Title
 	</h1>
-	<p>
+	<h5 class="">
 		@InformacoesAdicionaisContent
-	</p>
+	</h5>
 	<p>
-		<img style="width:95%" @attributes="AdditionalAttributes" class="img-fluid" />
+		<img id="bg" @attributes="AdditionalAttributes" class="img-fluid" />
+
 	</p>
 </div>
