--- a/AeroVendas.ULF.Cliente/Components/Sort.razor
+++ b/AeroVendas.ULF.Cliente/Components/Sort.razor
@@ -4,12 +4,12 @@
 	<select class="form-select" id="floatingSelectSort" aria-label="Floating Sort" @onchange="ApplySort">
 
 		<option value="" selected="selected"></option>
-		<option value="contrato">Contrato</option>
-		<option value="contrato desc">Contrato: Descendente</option>
-		<option value="Beneficiario">NomeBeneficiario</option>
-		<option value="Beneficiario desc">NomeBeneficiario: Descendente</option>
-		<option value="Carteirinha">CodigoBeneficiario</option>
-		<option value="Carteirinha desc">CodigoBeneficiario: Descendente</option>
+		<option value="Contrato">Contrato</option>
+		<option value="Contrato desc">Contrato: Descendente</option>
+		<option value="NomeBeneficiario">Nome Beneficiário</option>
+		<option value="NomeBeneficiario desc">Nome Beneficiário: Descendente</option>
+		<option value="CodigoBeneficiario">Carteirinha</option>
+		<option value="CodigoBeneficiario desc">Carteirinha: Descendente</option>
 
 
 	</select>
