--- a/AeroVendas.ULF.Cliente/Pages/Index.razor
+++ b/AeroVendas.ULF.Cliente/Pages/Index.razor
@@ -8,8 +8,7 @@
 <Home Title="Aero Vendas Unimed Leste Fluminense"
 	  @attributes="AdditionalAttributes">
 	<InformacoesAdicionaisContent>
-		Aqui você pode pesquisar os logs de acesso aos Normativos e Politicas 
-		da Unimed Leste Fluminense!
+		Sistema de Email Marketing para contratos sem o produto Aero da Unimed Leste Fluminense!
 	</InformacoesAdicionaisContent>
 </Home>
 
@@ -18,7 +17,7 @@
 	public Dictionary<string, object> AdditionalAttributes { get; set; } =
 		new Dictionary<string, object>
 		{
-			{ "src", "assets/AeroVendas.jpg" },
+			{ "src", "assets/AeroVendasV2.jpg" },
 			{ "alt", "Aero Vendas" }
 		};
 }
