--- a/AeroVendas.ULF.Cliente/Shared/NavMenu.razor
+++ b/AeroVendas.ULF.Cliente/Shared/NavMenu.razor
@@ -22,7 +22,7 @@
             <div class="nav-item px-3">
 
                 <a class="nav-link inactive noHover fs-3" role="link" aria-disabled="true">
-                    <i class="@imageEnv"></i>@hostEnviroment.Environment
+                    <i class="@imageEnv" style="margin-right: 9px;"></i>@hostEnviroment.Environment
                 </a>
             </div>
         }
