--- a/AeroVendas.ULF.Cliente/Pages/ContratosSemAero.razor
+++ b/AeroVendas.ULF.Cliente/Pages/ContratosSemAero.razor
@@ -33,7 +33,7 @@
 	<div class="row">
 
 		<div class="col">
-			<AeroVendasTable viewAeroVendas="ListContratoSemAeroVendas" />
+			<AeroVendasTable viewAeroVendas="ListContratoSemAeroVendas" Aguardando="Aguardando" />
 		</div>
 	</div>
 </div>
