--- a/AeroVendas.ULF.Cliente/Pages/ContratosSemAero.razor
+++ b/AeroVendas.ULF.Cliente/Pages/ContratosSemAero.razor
@@ -2,7 +2,7 @@
 @using AeroVendas.ULF.Cliente.Components
 @using Microsoft.AspNetCore.Authorization
 
-@attribute [Authorize]
+@attribute [Authorize(Roles = "Administrator,AeroAdmin")]
 
 
 <div id="content">
