--- a/AeroVendas.ULF.Cliente/Shared/NavMenu.razor
+++ b/AeroVendas.ULF.Cliente/Shared/NavMenu.razor
@@ -35,7 +35,7 @@
 
             </NavLink>
         </div>
-        <AuthorizeView>
+        <AuthorizeView Roles="Administrator,AeroAdmin">
             <Authorized>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="ContratosSemAero">
