--- a/AeroVendas.ULF.Cliente/Components/AuthLinks.razor
+++ b/AeroVendas.ULF.Cliente/Components/AuthLinks.razor
@@ -1,10 +1,19 @@
 ﻿<AuthorizeView>
 	<Authorized>
 		Olá, @context.User.Identity.Name!
+
 		<a href="Logout">Log out</a>
+
 	</Authorized>
+
 	<NotAuthorized>
-		<a href="Register">Registrar</a>
 		<a href="Login">Log in</a>
 	</NotAuthorized>
+</AuthorizeView>
+<AuthorizeView Roles="Administrator">
+	<Authorized>
+
+		<a href="Register">Registrar</a>
+
+	</Authorized>
 </AuthorizeView>
