--- a/AeroVendas.ULF.Cliente/Pages/Login.razor
+++ b/AeroVendas.ULF.Cliente/Pages/Login.razor
@@ -1,6 +1,5 @@
 ﻿@page "/login"
 
-<h3>Login</h3>
 
 @if (ShowAuthError)
 {
@@ -9,28 +8,44 @@
 	</div>
 }
 
-<EditForm Model="_userForAuthentication" OnValidSubmit="ExecuteLogin" 
-		  class="card card-body bg-light mt-5">
-	<DataAnnotationsValidator />
-	<div class="mb-3 row">
-		<label for="username" class="col-md-2 col-form-label">Login:</label>
-		<div class="col-md-10">
-			<InputText id="username" class="form-control"
-					   @bind-Value="_userForAuthentication.UserName" />
-			<ValidationMessage For="@(() => _userForAuthentication.UserName)" />
-		</div>
+<div class="card">
+    <h4 class="card-header">Login</h4>
+    <div class="card-body">
+
+		<EditForm Model="_userForAuthentication" OnValidSubmit="ExecuteLogin" 
+			  class="card card-body bg-light mt-5">
+			<DataAnnotationsValidator />
+			<div class="form-group">
+
+				<label for="username" class="col-md-2 col-form-label">Username</label>
+			
+					<InputText id="username" class="form-control"
+							   @bind-Value="_userForAuthentication.UserName" />
+					<ValidationMessage For="@(() => _userForAuthentication.UserName)" />
+				
+			</div>
+			<div class="form-group">
+				<label for="password" class="col-md-2 col-form-label">Password</label>
+				
+					<InputText type="password" id="password" class="form-control" 
+							   @bind-Value="_userForAuthentication.Password" />
+					<ValidationMessage For="@(() => _userForAuthentication.Password)" />
+				
+			</div>
+			<div class="form-group mt-3">
+				<button disabled="@loading" type="submit" class="btn btn-success float-end">
+					@if (loading) 
+					{
+						<span class="spinner-border spinner-border-sm mr-1"></span>
+					}
+					Login
+				</button>
+			</div>
+		@*<div class="row">
+			<div class="col-md-12">
+				<button type="submit" class="btn btn-success float-end">Login</button>
+			</div>
+				</div>*@
+		</EditForm>
 	</div>
-	<div class="mb-3 row">
-		<label for="password" class="col-md-2 col-form-label">Password:</label>
-		<div class="col-md-10">
-			<InputText type="password" id="password" class="form-control" 
-					   @bind-Value="_userForAuthentication.Password" />
-			<ValidationMessage For="@(() => _userForAuthentication.Password)" />
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-12">
-			<button type="submit" class="btn btn-success float-end">Login</button>
-		</div>
-	</div>
-</EditForm>
+</div>
