--- a/AeroVendas.ULF.Cliente/Pages/Login.razor
+++ b/AeroVendas.ULF.Cliente/Pages/Login.razor
@@ -8,7 +8,7 @@
 	</div>
 }
 
-<div class="card">
+<div class="card offset-3" style="width: 50%;">
     <h4 class="card-header">Login</h4>
     <div class="card-body">
 
