Inclusão do TinyMCE

--- a/AeroVendas.ULF.Cliente/Shared/NavMenu.razor
+++ b/AeroVendas.ULF.Cliente/Shared/NavMenu.razor
@@ -61,6 +61,15 @@
                     <NavLink class="nav-link" href="ContratosSemAero">
                         <span class="oi oi-list-rich" aria-hidden="true"></span> Contratos Sem Aero
                     </NavLink>
+
+                </div>
+
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="/EditorWidget">
+
+                        <span class="oi oi-envelope-closed" aria-hidden="true"></span>HTML Email Template
+
+                    </NavLink>
                 </div>
             </Authorized>
         </AuthorizeView>
