--- a/AeroVendas.ULF.Cliente/Shared/NavMenu.razor
+++ b/AeroVendas.ULF.Cliente/Shared/NavMenu.razor
@@ -71,6 +71,14 @@
 
                     </NavLink>
                 </div>
+
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="/MensagemHTML">
+                        <span class="oi oi-envelope-closed" aria-hidden="true"></span>Mensagems HTML
+                    </NavLink>
+                </div>
+
+
             </Authorized>
         </AuthorizeView>
 
