--- a/AeroVendas.ULF.Cliente/Components/Pagination.razor
+++ b/AeroVendas.ULF.Cliente/Components/Pagination.razor
@@ -1,12 +1,14 @@
-﻿<nav aria-label="Page navigation example">
-	<ul class="pagination justify-content-left">
+﻿	<ul class="pagination hidden-xs pull-right">
 		@foreach (var link in _links)
 		{
 			<li @onclick="() => OnSelectedPage(link)" style="cursor: pointer"
-				class="page-item @(link.Enabled ? null : "disabled")
+				class="pagination hidden-xs pull-right @(link.Enabled ? null : "disabled")
 				@(link.Active ? "active" : null)">
-				<span class="page-link" href="#">@link.Text</span>
+					@link.Text
+
 			</li>
 		}
 	</ul>
-</nav>
+
+
+ 
