--- a/AeroVendas.ULF.Cliente/Pages/Component.razor
+++ b/AeroVendas.ULF.Cliente/Pages/Component.razor
@@ -1,9 +1,4 @@
-﻿@page "/MensagemHTML"
-@using AeroVendas.ULF.Cliente.Components
-@using Microsoft.AspNetCore.Authorization
-
-@attribute [Authorize]
-
+﻿<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css /> -->
 <div class="container">
     <div class="row">
         <div class="col-md-offset-1 col-md-10">
