--- a/AeroVendas.ULF.Cliente/Components/PageSizeDropDown.razor
+++ b/AeroVendas.ULF.Cliente/Components/PageSizeDropDown.razor
@@ -1,4 +1,4 @@
-﻿@*<div class="form-group shadow">
+﻿<div class="form-group shadow col-md-12">
 	<select class="form-select" @onchange="OnPageSizeChange">
 		<option>2</option>
 		<option>4</option>
@@ -12,19 +12,3 @@
 
 	</select>
 </div>
-*@
-<form class="form-horizontal pull-right">
-	<div class="form-group">
-		<label>Show : </label>
-		<select class="form-control" @onchange="OnPageSizeChange">
-			<option>5</option>
-			<option>10</option>
-			<option>15</option>
-			<option>20</option>
-			<option selected="selected">50</option>
-			<option>100</option>
-			<option>150</option>
-			<option>200</option>
-		</select>
-	</div>
-</form>
