--- a/AeroVendas.ULF.Cliente/Pages/ContratosSemAero.razor.css
+++ b/AeroVendas.ULF.Cliente/Pages/ContratosSemAero.razor.css
@@ -15,26 +15,13 @@
         content: 'Página ' counter(page) ' de ' counter(pages);
     }
 }
-/*
-body {
-    counter-reset: page;
-} 
 
-#content {
-    display:table;
+.table thead tr th {
+    color: #fff !important;
+    background-color: rgba(255, 255, 255, 0.2) !important;
+    font-size: 16px !important;
+    font-weight: 500 !important;
+    text-transform: uppercase !important;
+    padding: 12px !important;
+    border: none !important;
 }
-
-#pageFooter {
-    display: table-footer-group;
-    counter-increment: page;
-}
-    #pageFooter:after {
-        content: "Página " counter(page);
-        left: 0;
-        top: 100%;
-        white-space: nowrap;
-        z-index: 20;
-        -moz-border-radius: 5px;
-        -moz-box-shadow: 0px 0px 4px #222;
-        background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
-    }*/
