--- a/AeroVendas.ULF.Cliente/Components/MensagensHtmlTable.razor
+++ b/AeroVendas.ULF.Cliente/Components/MensagensHtmlTable.razor
@@ -34,10 +34,11 @@
 						@mensagem.ModificadoEm
 					</td>
 					<td class="align-middle">
-						
-						<a class="btn btn-primary active" href="/updateProduct/@mensagem.Id">
+
+						<a class="btn btn-primary active" href="/mensagem/@mensagem.Id">
 							<iconify-icon icon="oi:eye"></iconify-icon>
 						</a>
+
 						<a class="btn btn-info" href="/updateProduct/@mensagem.Id">
 							<iconify-icon icon="oi:pencil"></iconify-icon>
 						</a>
