--- a/AeroVendas.ULF.Cliente/Pages/MensagemHTML.razor
+++ b/AeroVendas.ULF.Cliente/Pages/MensagemHTML.razor
@@ -6,7 +6,7 @@
 
 <div id="content">
 
-	<div class="panel-heading h1">Contratos sem Aero</div>
+	<div class="panel-heading h1">Lista de templates E-mail</div>
 	<div class="panel-body">
 		<div class="row mb-3">
 
