--- a/AeroVendas.ULF.Cliente/Components/MensagensHtmlTable.razor
+++ b/AeroVendas.ULF.Cliente/Components/MensagensHtmlTable.razor
@@ -15,9 +15,10 @@
 			@foreach (var mensagem in mensagensHTML)
 			{
 				<tr>
-				
+
 					<td class="align-middle">
-						<a href="/mensagem/@mensagem.Id">
+
+						<a class="link-secondary" href="/EditorWidgetMensagem/@mensagem.Id">
 							@mensagem.Titulo
 						</a>
 					</td>
@@ -35,11 +36,11 @@
 					</td>
 					<td class="align-middle">
 
-						<a class="btn btn-primary active" href="/mensagem/@mensagem.Id">
+						<a class="btn btn-primary active" href="/updateMensagem/@mensagem.Id">
 							<iconify-icon icon="oi:eye"></iconify-icon>
 						</a>
 
-						<a class="btn btn-info" href="/updateProduct/@mensagem.Id">
+						<a class="btn btn-info" href="/updateMensagem/@mensagem.Id">
 							<iconify-icon icon="oi:pencil"></iconify-icon>
 						</a>
 						<button type="button" class="btn btn-danger"
