--- a/AeroVendas.ULF.Cliente/Pages/MensagemHTML.razor
+++ b/AeroVendas.ULF.Cliente/Pages/MensagemHTML.razor
@@ -18,7 +18,7 @@
 			<div class="col-md-2">
 				<Sort OnSortChanged="SortChanged" />
 			</div>
-
+			
 		</div>
 	</div>
 
@@ -30,6 +30,11 @@
 
 		<div class="col-md-1 hideWhenPrint">
 			<PageSizeDropDown SelectedPageSize="SetPageSize" />
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-2">
+			<a class="btn btn-success mb-1" href="/CreateMensagemHTML">Nova Campanha</a>
 		</div>
 	</div>
 	<div class="row">
