--- a/AeroVendas.ULF.Cliente/Pages/CreateMensagemHTML.razor
+++ b/AeroVendas.ULF.Cliente/Pages/CreateMensagemHTML.razor
@@ -13,7 +13,7 @@
 		</div>
 	</div>
 
-	<InputText type="hidden" id="templateEmailHtml" class="form-control" @bind-Value="_mensagem.TemplateEmailHtml" />
+	<InputText hidden="true" id="templateEmailHtml" class="form-control" @bind-Value="_mensagem.TemplateEmailHtml" />
 
 	
 	<div class="row">
