Pagina de visualização

--- a/AeroVendas.ULF.Cliente/Pages/MensagemHTML.razor
+++ b/AeroVendas.ULF.Cliente/Pages/MensagemHTML.razor
@@ -16,7 +16,7 @@
 			<div class="col-md-5">
 			</div>
 			<div class="col-md-2">
-				<Sort OnSortChanged="SortChanged" />
+				<SortMensagemHTML OnSortChanged="SortChanged" />
 			</div>
 			
 		</div>
