--- a/AeroVendas.ULF.Cliente/Components/MensagensHtmlTable.razor
+++ b/AeroVendas.ULF.Cliente/Components/MensagensHtmlTable.razor
@@ -36,7 +36,7 @@
 					</td>
 					<td class="align-middle">
 
-						<a class="btn btn-primary active" href="/updateMensagem/@mensagem.Id">
+						<a class="btn btn-primary active" href="/MensagemHTML/@mensagem.Id">
 							<iconify-icon icon="oi:eye"></iconify-icon>
 						</a>
 
