--- a/AeroVendas.ULF.Cliente/Pages/MensagemHTMLPreview.razor
+++ b/AeroVendas.ULF.Cliente/Pages/MensagemHTMLPreview.razor
@@ -9,7 +9,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12">
-					@Mensagem.TemplateEmailHtml
+				@((MarkupString)(MarkupStringSanitized)@Mensagem.TemplateEmailHtml)
 			</div>
 		
 			<div class="row">
