--- a/AeroVendas.ULF.Cliente/Components/MensagensHtmlTable.razor
+++ b/AeroVendas.ULF.Cliente/Components/MensagensHtmlTable.razor
@@ -18,7 +18,7 @@
 
 					<td class="align-middle">
 
-						<a class="link-secondary" href="/EditorWidgetMensagem/@mensagem.Id">
+						<a class="link-secondary" href="/MensagemHTML/@mensagem.Id">
 							@mensagem.Titulo
 						</a>
 					</td>
