--- a/AeroVendas.ULF.Cliente/Pages/UpdateMensagemHTML.razor
+++ b/AeroVendas.ULF.Cliente/Pages/UpdateMensagemHTML.razor
@@ -5,7 +5,7 @@
 @if (_mensagem != null)
 {
 
-	<EditForm EditContext="_editContext" OnValidSubmit="Update" class="card card-body bg-light mt-5">
+	<EditForm  OnValidSubmit="Update" Model="@_mensagem" class="card card-body bg-light mt-5">
 		<DataAnnotationsValidator />
 
 
@@ -22,12 +22,16 @@
 	
 
 		<div class="row">
-			<div class="col-md-12">
-				<button type="submit" class="btn btn-success float-end"
+			<div class="col">
+				<a href="/MensagemHTML" class="btn btn-danger float-end">Voltar</a>
+				<button type="submit" class="btn btn-success me-4 float-end"
 						disabled="@formInvalid">
 					Gravar
 				</button>
+
+
 			</div>
+
 		</div>
 	</EditForm>
 	<Editor @bind-Value="_mensagem.TemplateEmailHtml" ApiKey="Fzx94ksz5pf42cvc074lz2yikzw5x780fg8y6501jwkwoat0" Disable=@disable Conf="@editorConf" />
