--- a/AeroVendas.ULF.Cliente/Shared/NavMenu.razor
+++ b/AeroVendas.ULF.Cliente/Shared/NavMenu.razor
@@ -64,14 +64,18 @@
 
                 </div>
 
-              
-
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="/MensagemHTML">
                         <span class="oi oi-envelope-closed" aria-hidden="true"></span>Mensagems HTML
                     </NavLink>
                 </div>
 
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="uploadImage">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Upload Imagens
+                    </NavLink>
+
+                </div>
 
             </Authorized>
         </AuthorizeView>
