--- a/AeroVendas.ULF.Cliente/Shared/ImageUpload.razor
+++ b/AeroVendas.ULF.Cliente/Shared/ImageUpload.razor
@@ -9,9 +9,8 @@
 @if(arquivo != null)
 {
 	<div>
-		<img class="image" src="data:image/gif;base64,@_content">
+		<img class="image" src="data:image/jpg;base64,@_content" width="400px">
 
-		<img class="image-preview" src="data:image/gif;base64,@_content">
 		
 	</div>
 }
