--- a/AeroVendas.ULF.Cliente/Pages/Login.razor
+++ b/AeroVendas.ULF.Cliente/Pages/Login.razor
@@ -8,7 +8,7 @@
 	</div>
 }
 
-<div class="card offset-3" style="width: 50%;">
+<div class="card offset-4" style="width: 25%;">
     <h4 class="card-header">Login</h4>
     <div class="card-body">
 
@@ -17,7 +17,7 @@
 			<DataAnnotationsValidator />
 			<div class="form-group">
 
-				<label for="username" class="col-md-2 col-form-label">Username</label>
+				<label for="username" class="col-xs-2 col-form-label">Username</label>
 
 				<InputText id="username" class="form-control" 
 							   @bind-Value="_userForAuthentication.UserName" />
@@ -25,7 +25,7 @@
 				
 			</div>
 			<div class="form-group">
-				<label for="password" class="col-md-2 col-form-label">Password</label>
+				<label for="password" class="col-xs-2 col-form-label">Password</label>
 				
 					<InputText type="password" id="password" class="form-control" 
 							   @bind-Value="_userForAuthentication.Password" />
