--- a/AeroVendas.ULF.Cliente/Components/ArquivoTable.razor
+++ b/AeroVendas.ULF.Cliente/Components/ArquivoTable.razor
@@ -6,7 +6,7 @@
 				<th>Nome</th>
 				<th>Link</th>
 				<th>Imagem</th>
-				<th>Criado Em</th>
+				<th></th>
 				<th></th>
 			</tr>
 		</thead>
@@ -27,25 +27,32 @@
 					<td class="align-middle">
 						<img class="image" src="@arquivo.Tipo" width="200px" />
 					</td>
-					<td class="align-middle">
-						@arquivo.CriadoPor
-					</td>
 					
+					<td class="align-middle">
+
+						<button type="button" class="btn btn-danger"
+						@onclick="() => CallCopyLink(arquivo.Id)">
+									Copy Link
+						</button>
+						
+					</td>
 					<td class="align-middle">
 
 						<button type="button" class="btn btn-danger"
 						@onclick="() => CallConfirmationModal(arquivo.Id)">
 							<iconify-icon icon="oi:circle-x"></iconify-icon>
 						</button>
-						
+
 					</td>
 
 				</tr>
 			}
 		</tbody>
 	</table>
-	<Confirmation BodyMessage="Deseja apagar este template?"
+	<Confirmation BodyMessage="Deseja apagar esta imagem?"
 				  OnOKClicked="DeleteArquivo" @ref="_confirmation" />
+	<Confirmation BodyMessage="Deseja Copiar o Link?"
+			  OnOKClicked="CopyLink" @ref="_ConfirmationCopyLink" />
 }
 else
 {
