--- a/AeroVendas.ULF.Cliente/Pages/Arquivos.razor
+++ b/AeroVendas.ULF.Cliente/Pages/Arquivos.razor
@@ -40,7 +40,7 @@
 	<div class="row">
 
 		<div class="col">
-			<ArquivoTable arquivos="ArquivoList" OnDelete="DeleteArquivo" OnCopyLink="CopyLink" Aguardando="Aguardando" />
+			<ArquivoTable arquivos="ArquivoList" OnDelete="DeleteArquivo" Aguardando="Aguardando" />
 		</div>
 
 	</div>
