--- a/AeroVendas.ULF.Cliente/Pages/Arquivos.razor
+++ b/AeroVendas.ULF.Cliente/Pages/Arquivos.razor
@@ -6,7 +6,7 @@
 
 <div id="content">
 
-	<div class="panel-heading h1">Lista de templates E-mail</div>
+	<div class="panel-heading h1">Galeria de Imagens</div>
 	<div class="panel-body">
 		<div class="row mb-3">
 
@@ -40,7 +40,7 @@
 	<div class="row">
 
 		<div class="col">
-			<ArquivoTable arquivos="ArquivoList" OnDelete="DeleteArquivo" Aguardando="Aguardando" />
+			<ArquivoTable arquivos="ArquivoList" OnDelete="DeleteArquivo" OnCopy="CopyClipbard" Aguardando="Aguardando" />
 		</div>
 
 	</div>
