--- a/AeroVendas.ULF.Cliente/Components/ArquivoTable.razor
+++ b/AeroVendas.ULF.Cliente/Components/ArquivoTable.razor
@@ -18,7 +18,7 @@
 						@onclick="() => CallConfirmationModal(arquivo.Id)">
 							<iconify-icon icon="oi:circle-x"></iconify-icon> Apagar
 						</button>
-						<button type="button" class="btn btn-success float-end" @onclick="() => CallCopyElement(arquivo.Id)" ><iconify-icon icon="line-md:clipboard-arrow-twotone" style="font-size: 36px" class="iconify--line-md"></iconify-icon>Copiar Link</button>
+						<button type="button" class="btn btn-success float-end" @onclick="() => CallCopyElement(arquivo.Id)" ><iconify-icon icon="line-md:clipboard-arrow-twotone" class="iconify--line-md"></iconify-icon>Copiar Link</button>
 						
 					</div>
 						
