--- a/AeroVendas.ULF.Cliente/Shared/NavMenu.razor
+++ b/AeroVendas.ULF.Cliente/Shared/NavMenu.razor
@@ -30,7 +30,7 @@
 
         @if (hostEnviroment.IsDevelopment())
         {
-            <div class="nav-item px-3">
+         @*   <div class="nav-item px-3">
                 <NavLink class="nav-link" href="jsinterop">
                     <span class="oi oi-plus" aria-hidden="true"></span>JSInterop Exemplos
                 </NavLink>
@@ -44,7 +44,7 @@
                 <NavLink class="nav-link" href="toastrwrapper">
                     <span class="oi oi-plus" aria-hidden="true"></span>Toast Wrapper Exemplos
                 </NavLink>
-            </div>
+            </div>*@
         }
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
