--- a/AeroVendas.ULF.Cliente/Components/Pagination.razor
+++ b/AeroVendas.ULF.Cliente/Components/Pagination.razor
@@ -1,4 +1,5 @@
-﻿ <nav aria-label="Page navigation example">
+﻿<h4>Total de registros: @MetaData.TotalCount</h4> 
+<nav aria-label="Page navigation example">
 	<ul class="pagination justify-content-left">
 		@foreach (var link in _links)
 		{
