--- a/AeroVendas.ULF.Cliente/Pages/Arquivos.razor
+++ b/AeroVendas.ULF.Cliente/Pages/Arquivos.razor
@@ -15,10 +15,9 @@
 			</div>
 			<div class="col-md-5">
 			</div>
-			@*<div class="col-md-2">
-				<SortMensagemHTML OnSortChanged="SortChanged" />
-			</div>*@
-			
+			<div class="col-md-2">
+				<SortFiles OnSortChanged="SortChanged" />
+			</div>
 		</div>
 	</div>
 
